--- a/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
+++ b/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
@@ -37,7 +37,7 @@
                 {% endif %}
 
             {% if orderForm.date is defined %}
-                <div class="col-xs-12 col-sm-4 form-group">
+                <div class="col-xs-12 col-sm-6 col-md-4 form-group">
                     <div class="col-xs-12">
                         {{ form_label(orderForm.date, '', {
                             'attr': {'class': 'control-label'}
@@ -59,7 +59,7 @@
             {% endif %}
 
             {% if orderForm.type is defined %}
-                <div class="col-xs-12 col-sm-4 form-group">
+                <div class="col-xs-12 col-sm-6 col-md-4 form-group">
                     <div class="col-xs-12">
                         {{ form_label(orderForm.type, '', {
                             'attr': {'class': 'control-label'}
@@ -77,7 +77,7 @@
             {% endif %}
 
             {% if orderForm.nbTickets is defined and flow.getCurrentStepNumber() == 1 %}
-                <div class="col-xs-12 col-sm-4 form-group">
+                <div class="col-xs-12 col-md-4 form-group">
                     <div class="col-xs-12">
                         {{ form_label(orderForm.nbTickets, '', {
                             'attr': {'class': 'control-label'}
@@ -93,6 +93,28 @@
                     {{ form_widget(orderForm.nbTickets, {
                         'attr': {'class': 'form-control'}
                     }) }}
+
+                    <table id="calculator">
+                        <tr>
+                            <td><span class="btn btn-default calc_number">1</span></td>
+                            <td><span class="btn btn-default calc_number">2</span></td>
+                            <td><span class="btn btn-default calc_number">3</span></td>
+                        </tr>
+                        <tr>
+                            <td><span class="btn btn-default calc_number">4</span></td>
+                            <td><span class="btn btn-default calc_number">5</span></td>
+                            <td><span class="btn btn-default calc_number">6</span></td>
+                        </tr>
+                        <tr>
+                            <td><span class="btn btn-default calc_number">7</span></td>
+                            <td><span class="btn btn-default calc_number">8</span></td>
+                            <td><span class="btn btn-default calc_number">9</span></td>
+                        </tr>
+                        <tr>
+                            <td><span class="btn btn-default calc_number">0</span></td>
+                            <td colspan="2"><span class="btn btn-default calc_del"><span class="glyphicon glyphicon-arrow-left"></span></span></td>
+                        </tr>
+                    </table>
                 </div>
             {% endif %}
 
