--- a/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
+++ b/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
@@ -122,7 +122,15 @@
                 {{ form_rest(orderForm) }}
             </div>
 
-            {% include '@CraueFormFlow/FormFlow/buttons.html.twig' %}
+            {% include '@CraueFormFlow/FormFlow/buttons.html.twig' with {
+                craue_formflow_button_class_last: 'btn btn-primary',
+                craue_formflow_button_class_back: 'btn btn-default left-btn',
+                craue_formflow_button_class_reset: 'btn btn-default centered-btn',
+                craue_formflow_button_label_next: 'Next',
+                craue_formflow_button_label_finish: 'Complete',
+                craue_formflow_button_label_back: 'Back',
+                craue_formflow_button_label_reset: 'Reset',
+            } %}
         {{ form_end(orderForm) }}
     </div>
 {% endblock %}
