--- a/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
+++ b/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
@@ -140,6 +140,21 @@
                 {{ form_rest(orderForm) }}
             </div>
 
+            {% if flow.currentStepNumber == 3 %}
+                <form action="/your-server-side-code" method="POST">
+                    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                            data-key="pk_test_hoXdqVAmVW3pIQOWqanoshlw"
+                            data-amount="2000"
+                            data-name="Demo Site"
+                            data-description="2 widgets"
+                            data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+                            data-locale="auto"
+                            data-zip-code="true"
+                            data-currency="eur">
+                    </script>
+                </form>
+            {% endif %}
+
             {% include '@CraueFormFlow/FormFlow/buttons.html.twig' with {
                 craue_formflow_button_class_last: 'btn btn-primary',
                 craue_formflow_button_class_back: 'btn btn-default',
