User now can't click on tabs to go back to previous steps in the payment form anymore

--- a/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
+++ b/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
@@ -26,10 +26,7 @@
         <div>
             {% include 'OTSBillingBundle:Billing:stepList_content.html.twig' %}
         </div>
-        {{ form_start(orderForm, {
-                'action': path(app.request.attributes.get('_route'),
-                app.request.query.all | craue_removeDynamicStepNavigationParameters(flow))
-        }) }}
+        {{ form_start(orderForm) }}
             {% if form_errors(orderForm) %}
                 <div class="alert alert-warning">
                     {{ form_errors(orderForm) }}
