CraueFormFlowBundle's 'Complete form' button now hidden

--- a/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
+++ b/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
@@ -182,6 +182,7 @@
             {% endif %}
 
             {% include '@CraueFormFlow/FormFlow/buttons.html.twig' with {
+                craue_formflow_button_class_finish: 'hidden',
                 craue_formflow_button_class_last: 'btn btn-primary',
                 craue_formflow_button_class_back: 'btn btn-default',
                 craue_formflow_button_class_reset: 'btn btn-default',
