--- a/src/OTS/CoreBundle/Resources/views/layout.html.twig
+++ b/src/OTS/CoreBundle/Resources/views/layout.html.twig
@@ -96,7 +96,7 @@
 
 	  	{% block javascripts %}
 	  		{% javascripts
-		  		'//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'
+		  		'//code.jquery.com/jquery-3.2.1.min.js'
 		  		'//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'
 		  		'//code.jquery.com/ui/1.12.1/jquery-ui.js' %}
 		  		<script type="text/javascript" src="{{ asset_url }}"></script>
