--- a/web/bundles/otscore/css/billing.css
+++ b/web/bundles/otscore/css/billing.css
@@ -139,3 +139,7 @@ form #btn-stripe-checkout {
 	display: block;
 	margin: 30px auto 50px;
 }
+.alert-warning .highlight {
+	background-color: #f5f5f5;
+	border-radius: 3px;
+}
