--- a/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
+++ b/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
@@ -15,12 +15,24 @@
 {% endblock %}
 
 {% block body %}
-	{% for message in app.session.flashbag.get('info') %}
+	<h1 id="title">Book online</h1>
+    <hr />
+
+    {% for message in app.session.flashbag.get('info') %}
         <div class="alert alert-info">{{ message }}</div>
     {% endfor %}
 
-    <h1 id="title">Book online</h1>
-    <hr />
+    {% for flashMessage in app.session.flashbag.get('success') %}
+        <div class="alert alert-success">
+            {{ flashMessage }}
+        </div>
+    {% endfor %}
+
+    {% for flashMessage in app.session.flashbag.get('error') %}
+        <div class="alert alert-danger">
+            {{ flashMessage }}
+        </div>
+    {% endfor %}
 
     <div class="row">
         <div>
@@ -183,16 +195,18 @@
             </div>
 
             {% if flow.currentStepNumber == 1 %}
-                <ul class="text-block">
-                    <li>
-                        "Half-day" tickets cost half the price of "Full-day" tickets, but only let you enter the museum after 2pm.
-                    </li>
-                    <li>
-                        Open everyday (except tuesday) from 9am to 6pm.<br />
-                        Open until 9.45pm on wednesday and friday.<br />
-                        Closed on the 1st of May, the 1st of November and the 25th of december.
-                    </li>
-                </ul>
+                <div class="row alert alert-info">
+                    <ul>
+                        <li>
+                            "Half-day" tickets cost half the price of "Full-day" tickets, but only let you enter the museum after 2pm.
+                        </li>
+                        <li>
+                            Open everyday (except tuesday) from 9am to 6pm.<br />
+                            Open until 9.45pm on wednesday and friday.<br />
+                            Closed on the 1st of May, the 1st of November and the 25th of december.
+                        </li>
+                    </ul>
+                </div>
             {% endif %}
 
             {% include '@CraueFormFlow/FormFlow/buttons.html.twig' with {
