Fixed some bugs in the booking form

--- a/src/OTS/CoreBundle/Resources/views/Core/index.html.twig
+++ b/src/OTS/CoreBundle/Resources/views/Core/index.html.twig
@@ -70,7 +70,7 @@
                     <h2>Discounted rate</h2>
 
                     <p>
-                        Student, french military, museum employee or Ministry of Culture employee
+                        French student, french military, museum employee or Ministry of Culture employee
                     </p>
 
                     <h3>10€</h3>
