--- a/app/Resources/views/emails/confirmation.html.twig
+++ b/app/Resources/views/emails/confirmation.html.twig
@@ -16,7 +16,7 @@
 </p>
 
 <p>
-	<b>Reference Code: 1u23DfGrr23Et4</b>
+	<b>Reference Code: {{ order.reference }}</b>
 </p>
 
 <div style="background-color:#f5f5f5;border:1px solid #e3e3e3;border-radius:4px;width:95%;margin:auto;display:flex;justify-content:space-around;padding:0 10px;text-align:center;">
