--- a/src/OTS/CoreBundle/Resources/views/layout.html.twig
+++ b/src/OTS/CoreBundle/Resources/views/layout.html.twig
@@ -42,6 +42,15 @@
                 	</div>
 
                 	<div class="collapse navbar-collapse">
+	                	<div id="lang-menu" class="navbar-text">
+						  	<a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'en'})) }}">
+						  		EN</a>
+						  <!-- </a> tag has to stay close to EN, otherwise it creates a random space after EN, highlighted when it's underlined on hover -->
+						  	<a href="{{  path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'fr'}))}}">
+						  		FR
+						  	</a>
+						</div>
+
 	                    <nav role="navigation">
 	                        <!-- actual menu list -->
 	                        <ul class="nav navbar-nav navbar-right">
