--- a/web/bundles/otscore/css/header.css
+++ b/web/bundles/otscore/css/header.css
@@ -12,11 +12,17 @@
 #header .navbar-header, #header .navbar-collapse, #header ul {
 	height: 60px;
 }
-#header .nav a {
+#header .nav a, #header .navbar-text a {
 	color: #eee;
 	padding: 0 15px;
 	margin: 20px 0 15px;
 	z-index: 9999;
+}
+#header .navbar-text a {
+	padding: 0 5px;
+}
+#header .navbar-text {
+	margin-top: 20px;
 }
 #header .nav a:focus, #header .nav a:active, #header .nav a:hover, #header .active a {
 	background-color: inherit;
@@ -33,6 +39,9 @@
 
 
 @media (max-width: 767px) {
+	#header {
+		font-size: 1.2em;
+	}
 	#header .navbar-collapse, #header ul {
 		height: auto;
 		border: none;
@@ -47,5 +56,10 @@
 	}
 	#header .active a {
 		border-bottom: 3px solid #eee;
+	}
+}
+@media (max-width: 991px) {
+	#header {
+		font-size: inherit;
 	}
 }
